Try to do some intelligent stuff vFINALE

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@source inline('loading-bars loading-infinity loading-circle loading-spinner loading-ring loading-ball')
+@source inline('loading-bars loading-infinity loading-circle loading-spinner loading-ring loading-ball');
 
 
 #loading-overlay {
